--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!-- plik index.html -->
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Tytuł strony </title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Tytuł strony</title>
   </head>
   <body>
     <h1>
